# atlassian_api_client

./: del_me.py  get_customers.py  pyproject.toml
tests/: test_atlassian_api_client.py
tests/func/unit/: test_jira_tools.py
tests/unit/: test_jira_tools 2.py  test_jira_tools.py  test_servicedesk_get_tools.py
tool_box/: atlassian_get_tools.py  atlassian_post_tools.py  atlassian_put_tools.py  jira_get_tools.py  jira_post_tools.py  jira_tools.py  servicedesk_get_tools.py  servicedesk_tools.py
tool_box/confluence_tools/: confluence_get_tools.py  confluence_put_tools.py
tool_box/jira_service_management/: service_management_get_tools.py  service_management_post_tools.py  service_management_put_tools.py
tool_box/jira_tools/: jira_get_tools.py  jira_post_tools.py
